Fixed background shapes to remain behind all content

--- a/decision/static/decision/main.css
+++ b/decision/static/decision/main.css
@@ -215,12 +215,11 @@ a.article-title:hover {
     background: linear-gradient(180deg, rgba(210, 22, 104, 0.85) 0%, rgba(255, 255, 255, 0.85) 100%);
 }
 
-.background-img{
-    position: absolute;
+#bgDesign {
+    position: fixed;
     right: 0px;
     bottom: 0px;
     max-width: 100%;
     height: auto;
-
     transform: scaleX(-1);
 }
